# netbook-icon-theme

./: Makefile.am  Makefile.in  configure  configure.ac  index.theme
100x100/: Makefile.in
100x100/apps/: Makefile.in
16x16/: Makefile.in
16x16/icons/: Makefile.am  Makefile.in
24x24/: Makefile.in
24x24/icons/: Makefile.am  Makefile.in
32x32/: Makefile.in
32x32/apps/: Makefile.am  Makefile.in
32x32/icons/: Makefile.am  Makefile.in
48x48/: Makefile.in
48x48/apps/: Makefile.am  Makefile.in
48x48/icons/: Makefile.am  Makefile.in
