AC_PREREQ(2.53)

AC_INIT([netbook-icon-theme], [2.2.12])
AC_CONFIG_SRCDIR([24x24])

AM_INIT_AUTOMAKE([1.9 tar-ustar foreign])

# Define the toplevel path here
AC_SUBST(themedir, "\${datadir}/icons/")

AC_CONFIG_FILES([
Makefile

100x100/Makefile
100x100/apps/Makefile
16x16/Makefile
16x16/icons/Makefile
24x24/Makefile
24x24/icons/Makefile
32x32/Makefile
32x32/apps/Makefile
32x32/icons/Makefile
48x48/Makefile
48x48/apps/Makefile
48x48/icons/Makefile
])

AC_OUTPUT
